<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/close"
            android:background="@drawable/circular_red_shape_background"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </ImageButton>
    </LinearLayout>
    <TextView
        android:layout_marginTop="4dp"
        android:textColor="@color/green"
        android:text="Lock Vehicle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textIsSelectable="false"
            android:focusable="false"
            android:id="@+id/vehicle_no"
            android:hint="@string/vehicle_no"
            android:text="TS05EM2666"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:textIsSelectable="false"
            android:id="@+id/t_pin"
            android:hint="@string/tpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@color/ambulance_color"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_generate_tpin"
        android:layout_gravity="end"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/generate_tpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/engine_off_note"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/engine_off_note1"
        android:padding="5dp"
        android:lineSpacingExtra="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>