<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notifications.NotificationSettingActivity">

    <TextView
        android:id="@+id/tv_app_background"
        android:text="@string/allow_background"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_auto_start"
        android:layout_below="@+id/tv_app_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_auto_start"
            android:textColor="@color/black"
            android:padding="10dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/app_auto_start"
            android:layout_toStartOf="@+id/auto_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Switch
            android:id="@+id/auto_start"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_below="@+id/cv_auto_start"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacing="8dp"
        app:singleSelection="true"
        android:layout_margin="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_os"
            android:padding="10dp"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/bg_chip_selection_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_os"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_devices"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/bg_chip_selection_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_models"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/cp_third_party_apps"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:checked="false"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            app:chipBackgroundColor="@color/bg_chip_selection_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_party_app"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_settings"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
