<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:padding="5dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/generate_tpin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="We are sending a one time password on your registered mobile number ******4562."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_one"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:inputType="numberPassword"
            android:gravity="center"
            android:hint="@string/zero"
            android:maxLength="1"
            android:nextFocusRight="@+id/ed_two">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ed_two"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:hint="@string/zero"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"/>

        <EditText
            android:id="@+id/ed_three"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:hint="@string/zero"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"/>

        <EditText
            android:id="@+id/edt_four"
            android:hint="@string/zero"
            android:gravity="center"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:inputType="numberPassword"
            android:maxLength="1"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:hint="@string/tpin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_cnfm_password"
                android:hint="@string/cnfm_tpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/generate"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@color/ambulance_color"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>